spade-tests/src/snapshots/spade_tests__typeinference__reading_from_port_members_is_a_type_error.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {
    x: bool,
    y: int<3>
}

fn takes_normal(x: bool, y: int<3>) -> bool __builtin__

entity uut(val: ~& A) -> bool {
    let x = inst read_mut_wire(val.x);
    let y = inst read_mut_wire(val.y);
    takes_normal(x, y)
}


error: Field access on ~&A which is not a struct
  ┌─ testinput:9:32
  │
9 │     let x = inst read_mut_wire(val.x);
  │                                ^^^ Expected a struct, found ~&A
  │
  = help: Field access is only allowed on structs
